--- a/Hotel/BookingService/Consumers/API/appsettings.json
+++ b/Hotel/BookingService/Consumers/API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=HotelManagement;Trusted_Connection=True;MultipleActiveResultSets=true;Integrated Security=True; TrustServerCertificate=True;"
+  },
   "AllowedHosts": "*"
 }
